Solved all the todos.
Signed-off-by: Avinash Malik <avinash.malik@auckland.ac.nz>

--- a/TODO.org
+++ b/TODO.org
@@ -1,6 +1,6 @@
-* TODO Try to see what happens with QSS2-QSS1 delta-step size or quanta-quanta/2 delta step size difference for checking error on time-scale.
+* DONE Try to see what happens with QSS2-QSS1 delta-step size or quanta-quanta/2 delta step size difference for checking error on time-scale.
   SCHEDULED: <2018-03-30 Fri> DEADLINE: <2018-03-30 Fri>
-* TODO Check how to handle x'(t) = x(t) + y(t) type ODEs, especially since they all need different quanta, so which quanta to take?
+* DONE Check how to handle x'(t) = x(t) + y(t) type ODEs, especially since they all need different quanta, so which quanta to take?
   SCHEDULED: <2018-03-30 Fri> DEADLINE: <2018-03-30 Fri>
-* TODO Check the problem with x' = 1, etc.
-* TODO Check what to do with imaginary roots and also negative roots.
+* DONE Check the problem with x' = 1, etc.
+* DONE Check what to do with imaginary roots and also negative roots.
