--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-* An event based framework for simulation network of hybrid automaton.
+* An event based framework for simulating network of hybrid automata.
   The main contribution is the integration techniques, especially
   combination of higher order Quantized state systems combined with
   higher order Taylor series.
